# document_chat_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt  vercel.json
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/services/: blob_persistence.py  chat_service.py  document_service.py  embedding_service.py  indexing_jobs.py  llm_client.py  ocr_service.py  vector_store.py
backend/app/utils/: text.py
frontend/: app.py
tests/: test_text_utils.py
