[project]
name = "you-are-an-expert-full-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.11.0",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "numpy==2.2.5",
    "openai==1.77.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "pypdf2==3.0.1",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.40",
    "streamlit==1.45.0",
    "uvicorn[standard]==0.34.2",
]
